--- a/rtmath/rtmath-apps/conv-units/conv-units.vcxproj
+++ b/rtmath/rtmath-apps/conv-units/conv-units.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
