--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -272,9 +272,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="src\ddOutputMie.cpp" />
-    <ClCompile Include="src\ddOutputSingle.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+    <ClCompile Include="src\ddOutputSingle.cpp" />
     <ClCompile Include="src\ddpar.cpp" />
     <ClCompile Include="src\ddparGenerator.cpp" />
     <ClCompile Include="src\ddparGenerator_serialization.cpp" />
