--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -1,27 +1,27 @@
 # Build the apps
 
-add_subdirectory (absorb-slab)
-add_subdirectory (arm-index-files)
-add_subdirectory (atmosplot)
+#add_subdirectory (absorb-slab)
+#add_subdirectory (arm-index-files)
+#add_subdirectory (atmosplot)
 add_subdirectory (combo)
 add_subdirectory (conv-units)
-add_subdirectory (da)
-add_subdirectory (db-catalog-ddscat)
-add_subdirectory (ddparse)
-add_subdirectory (ddscat)
+#add_subdirectory (da)
+#add_subdirectory (db-catalog-ddscat)
+#add_subdirectory (ddparse)
+#add_subdirectory (ddscat)
 add_subdirectory (ddscat-ddpar)
 add_subdirectory (ddscat-genparams)
 add_subdirectory (expand-shorthand)
 add_subdirectory (garrett)
 add_subdirectory (getm)
-add_subdirectory (mie)
-add_subdirectory (roottest)
+#add_subdirectory (mie)
+#add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (shape)
 add_subdirectory (shape-basicdata)
-add_subdirectory (transmittance)
-add_subdirectory (uuid)
+#add_subdirectory (transmittance)
+#add_subdirectory (uuid)
 
 # Control option for creating qt apps
 option ( MAKE_GUIS
