A plot-pf program has been introduced. It calculates the ensemble isotropic phase function and then plots it. It also calculates the backscatter but does nothing with it yet.
It indicates that something is wrong with my tmatrix runs. Even for a single orientation,
the pf is way too high. I need to check my units with a simple case. Other than that, it seems
to work well. I will reuse much of this code in plotting several related quantities.

Need to also work on serialization of computed ensemble values. This serialization is a
temporary measure until ddOutput / ddOutputSingle is again serializable. Also need to link
up the ensemble generator with ddOutput / ddOutputSingle.

shape-ensembles tweaked to add more options.

raw-plotdata readded. It can make Sihvola plots properly now! Has memory leaks. Leaks aren't
really important here.


git-svn-id: file:///mnt/svn/rtmath@769 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/plot-pf/plot-pf.vcxproj
+++ b/rtmath/rtmath-apps/plot-pf/plot-pf.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{D92599CB-3466-4D59-A043-1C567DE596CE}</ProjectGuid>
-    <RootNamespace>rawplotdata</RootNamespace>
+    <ProjectGuid>{3F41A5DC-DC95-4501-A302-AE5E2398BC3D}</ProjectGuid>
+    <RootNamespace>plotpf</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -36,14 +36,11 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <TargetName>rtmath-raw-plotdata</TargetName>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -63,18 +60,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="CMakeLists.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
       <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="refraction.cpp" />
-    <ClCompile Include="shapedata.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="e-260K-35.6GHz.dat" />
-    <None Include="fractional volume e and m reln.xlsx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
