mie code revised to fix errors. Sreal are all correct. Simag has problems. Pf has problems, too. Committing to get tmatrix comparison built.
git-svn-id: file:///mnt/svn/rtmath@773 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/mie/CMakeLists.txt
+++ b/rtmath/rtmath-apps/mie/CMakeLists.txt
@@ -3,3 +3,4 @@ include (common)
 add_executable (rtmath-mie main.cpp)
 addapp(rtmath-mie)
 
+TARGET_LINK_LIBRARIES( rtmath-mie tmatrix-cpp tmatrix-fortran)
