--- a/rtmath/rtmath-apps/mie/mie.vcxproj
+++ b/rtmath/rtmath-apps/mie/mie.vcxproj
@@ -41,6 +41,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -66,6 +67,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\deps\tmatrix\VS\tmatrix-cpp\tmatrix-cpp.vcxproj">
+      <Project>{bc75d21e-9e1f-44ad-90a8-16f6a33881e6}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
       <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
     </ProjectReference>
