--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -14,7 +14,6 @@ add_subdirectory (ddscat-genparams)
 add_subdirectory (expand-shorthand)
 add_subdirectory (garrett)
 add_subdirectory (getm)
-#add_subdirectory (mie)
 #add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
 add_subdirectory (sector)
@@ -31,6 +30,7 @@ if (MAKE_GUIS)
 	add_subdirectory (ddscat-genparams-qt)
 	if (TMATRIX_FOUND)
 		add_subdirectory (tmatrix-convert-from-ddscat)
+		add_subdirectory (mie)
 	endif()
 endif()
 
