ROOT is no longer required for the core library. It is in the build system, but not during the linking phase. It was too intrusive, so I'll only invoke it when needed.
git-svn-id: file:///mnt/svn/rtmath@777 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -10,9 +10,9 @@ add_subdirectory (conv-units)
 #add_subdirectory (ddparse)
 #add_subdirectory (ddscat)
 add_subdirectory (ddscat-ddpar)
-add_subdirectory (ddscat-genparams)
+#add_subdirectory (ddscat-genparams)
 add_subdirectory (expand-shorthand)
-add_subdirectory (garrett)
+#add_subdirectory (garrett)
 add_subdirectory (getm)
 #add_subdirectory (roottest)
 add_subdirectory (rtmath-version)
