--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -76,9 +76,11 @@ add_definitions(-DWITH_CMAKE)
 get_target_property(rtmath_INCLUDE_DIRS rtmath INCLUDE_DIRECTORIES)
 if (NOT rtmath_INCLUDE_DIRS)
 	set(rtmath_INCLUDE_DIRS "")
+	set(rtmath-tests_INCLUDE_DIRS "")
 endif()
 #get_target_property(rtmath_LIBRARIES rtmath LIBRARIES)
 set(rtmath_LIBRARIES "")
+set(rtmath-tests_LIBRARIES "")
 
 #message(${rtmath_LIBRARIES})
 #message(${rtmath_INCLUDE_DIRS})
@@ -86,7 +88,7 @@ set(rtmath_LIBRARIES "")
 if(LOAD_PACKAGES)	
 	#add_package_dependency(rtmath DEPENDS_ON HDF5)
 	add_package_dependency(rtmath DEPENDS_ON NetCDF)
-	add_package_dependency(rtmath DEPENDS_ON ROOT)
+#	add_package_dependency(rtmath DEPENDS_ON ROOT)
 	add_package_dependency(rtmath DEPENDS_ON Boost)
 	add_package_dependency(rtmath DEPENDS_ON VTK)
 	add_package_dependency(rtmath DEPENDS_ON PCL)
@@ -120,9 +122,13 @@ add_executable (rtmath-tests ${modtests})
 # Ensure that the dynamic library builds first (so prebuild will have run)
 add_dependencies (rtmath-tests rtmath)
 target_link_libraries (rtmath-tests rtmath)
+#target_link_libraries(rtmath-tests 
+
 #add_package_dependency(rtmath-tests DEPENDS_ON rtmathDummy)
 set(rtmath-tests_LIBRARIES ${rtmath_LIBRARIES})
 set(rtmath-tests_INCLUDE_DIRS ${rtmath_INCLUDE_DIRS})
+add_package_dependency(rtmath-tests DEPENDS_ON ROOT)
+
 target_link_libraries (rtmath-tests ${COMMON_LIBS})
 target_link_libraries (rtmath-tests ${rtmath-tests_LIBRARIES})
 
