--- a/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
@@ -1,5 +1,10 @@
 include (common)
+set(rtmath-ddscat-ddpar_LIBRARIES "")
+set(rtmath-ddscat-ddpar_INCLUDE_DIRS "")
 
 add_executable (rtmath-ddscat-ddpar main.cpp)
+
+add_package_dependency(rtmath-ddscat-ddpar DEPENDS_ON ROOT)
+
 addapp(rtmath-ddscat-ddpar)
 
