--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -39,7 +39,7 @@ if (RYCURSES_FOUND)
 		"Make ncurses programs?" ON)
 	if (MAKE_NCURSES)
 		if (TMATRIX_FOUND)
-			add_subdirectory (mtplot)
+#			add_subdirectory (mtplot)
 			add_subdirectory (mttest)
 		endif()
 	endif()
