--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory (conv-units)
 #add_subdirectory (db-catalog-ddscat)
 #add_subdirectory (ddparse)
 #add_subdirectory (ddscat)
+add_subdirectory (ddscat-data)
 add_subdirectory (ddscat-ddpar)
 #add_subdirectory (ddscat-genparams)
 add_subdirectory (expand-shorthand)
