--- a/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
@@ -4,7 +4,7 @@ set(rtmath-ddscat-ddpar_INCLUDE_DIRS "")
 
 add_executable (rtmath-ddscat-ddpar main.cpp)
 
-add_package_dependency(rtmath-ddscat-ddpar DEPENDS_ON ROOT)
+#add_package_dependency(rtmath-ddscat-ddpar DEPENDS_ON ROOT)
 
 addapp(rtmath-ddscat-ddpar)
 
