Changed the hulls backend storage mechanish to use PointCloud<PointXYZ> instead of those pesky vector<matrixop> constructions that involved tons of copying.
shapestats now has rotations existing as shared_ptrs. calcRot returns the appropriate
const shared_ptr so callers no longer have to search rotations.
rotations still a set, but it is a special set with a custom comparison class that intrudes
into the shared_ptr target.

concave hull no longer 3d only.
aiming to calculate projected area of a rotation by projecting area, taking concave hull(2),
and then calculating object area with help of pcl.

new test case (test_shapefile) begun for concave area testing.
redid many test cpp files to remove rtmath.h dependency.


git-svn-id: file:///mnt/svn/rtmath@805 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -248,7 +248,9 @@
     </ClCompile>
     <ClCompile Include="src\absorb.cpp" />
     <ClCompile Include="src\absorber.cpp" />
-    <ClCompile Include="src\atmos.cpp" />
+    <ClCompile Include="src\atmos.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="src\atmoslayer.cpp" />
     <ClCompile Include="src\bhmie.cpp" />
     <ClCompile Include="src\chebyshev.cpp" />
