--- a/rtmath/rtmath/tests/tests.vcxproj.filters
+++ b/rtmath/rtmath/tests/tests.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="test_shapefile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_shapestats.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="data\rtmath.conf">
