shape-rectprism added. It provides a way to generate rectangle-derived shape files from user input. Very useful. Will extend to allow for header setting. Will also extend to duplicate Holly's generation algorithms.
Tiny corrections to rtmath-shape involving output file writing.

rtmath now has crossSection and denseMatrix. denseMatrix is a dense bool matrix, used for
determining lattice site occupation. Tested and used with shape-rectprism. crossSection
projects to a 2d plane and then can be used in hull calculations. But, the 2d convex hull
generates odd vertices for filling, so I need to adjust cross-section to translate a duplicate
cross section to give it unit depth. I also need to work on a 2d concave hull area and
perimeter-finding algorithm for nonsimple shapes.

hulls now use pointclouds internally. bug fixes.

test_shapestats added to eventually test cross-sectional area calculations. added a few
sample rectangular flakes to the test data, and test_shapestats will eventually verify against
all of these.


git-svn-id: file:///mnt/svn/rtmath@806 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (shape)
 add_subdirectory (shape-basicdata)
+add_subdirectory (shape-rectprism)
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
 
