early attempt at sector snowflake generation. the code does not yet work, but it will be able to generate arbitrary sector snowflakes.
rotations.h and .cpp modified to add rotation matrix generator function.


git-svn-id: file:///mnt/svn/rtmath@807 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -20,7 +20,9 @@ add_subdirectory (rtmath-version)
 add_subdirectory (sector)
 add_subdirectory (shape)
 add_subdirectory (shape-basicdata)
+#add_subdirectory (shape-combo)
 add_subdirectory (shape-rectprism)
+add_subdirectory (shape-sector-snowflake)
 #add_subdirectory (transmittance)
 #add_subdirectory (uuid)
 
