An early rosette-generation routine mostly works. It handles rotation correctly, but not all arms are correctly-placed. It fixes the sector flake issue of truncation by doing lots of Kd-tree searches. This has the bas side effect of dramatically slowind down generation, though, so an alternate method is desirable.
git-svn-id: file:///mnt/svn/rtmath@811 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-rosette/shape-rosette.vcxproj
+++ b/rtmath/rtmath-apps/shape-rosette/shape-rosette.vcxproj
@@ -11,8 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{4BB3CAA5-7675-459D-B256-9BD54EFF8D4B}</ProjectGuid>
-    <RootNamespace>mie</RootNamespace>
+    <ProjectGuid>{88E1DA67-7AF4-430A-AB1B-C0551AFF78BA}</ProjectGuid>
+    <RootNamespace>shaperosette</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -41,7 +41,6 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -60,9 +59,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <None Include="CMakeLists.txt" />
-  </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
