--- a/rtmath/rtmath-apps/stats-ddscat-combined-plots/CMakeLists.txt
+++ b/rtmath/rtmath-apps/stats-ddscat-combined-plots/CMakeLists.txt
@@ -4,7 +4,7 @@ set(rtmath-stats-ddscat-combined-plots_INCLUDE_DIRS "")
 
 add_executable (rtmath-stats-ddscat-combined-plots main.cpp)
 
-add_package_dependency(rtmath-stats-ddscat-combined-plots DEPENDS_ON ROOT)
+#add_package_dependency(rtmath-stats-ddscat-combined-plots DEPENDS_ON ROOT)
 
 addapp(rtmath-stats-ddscat-combined-plots)
 
