Odd. I overwrote a file.
git-svn-id: file:///mnt/svn/rtmath@815 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape/CMakeLists.txt
@@ -1,5 +1,5 @@
 include (common)
 
-add_executable (rtmath-shape-rectprism shape-main.cpp)
-addapp(rtmath-shape-rectprism)
+add_executable (rtmath-shape shape-main.cpp)
+addapp(rtmath-shape)
 
