Bugfixes and application tweaks to enable faster builds. uuid switched over to boost program_options.
git-svn-id: file:///mnt/svn/rtmath@818 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/ddscat-data/ddscat-data.vcxproj
+++ b/rtmath/rtmath-apps/ddscat-data/ddscat-data.vcxproj
@@ -65,6 +65,11 @@
   <ItemGroup>
     <ClCompile Include="data.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
+      <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
