ROOT doesn't provide all of the libraries to link. shape-basicdata needs libSpectrum.
git-svn-id: file:///mnt/svn/rtmath@825 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape-basicdata/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape-basicdata/CMakeLists.txt
@@ -5,6 +5,8 @@ set(rtmath-shape-basicdata_INCLUDE_DIRS "")
 add_executable (rtmath-shape-basicdata main.cpp)
 
 add_package_dependency(rtmath-shape-basicdata DEPENDS_ON ROOT)
+set(rtmath-shape-basicdata_LIBRARIES "${rtmath-shape-basicdata_LIBRARIES};Spectrum")
 
 addapp(rtmath-shape-basicdata)
+#message("${rtmath-shape-basicdata_LIBRARIES}")
 
