The stats / avg combining code now works for holly's flakes. However, I am running afoul of my poor matrixop performance. I'll switch entirely to pcl and eigen in the future.
git-svn-id: file:///mnt/svn/rtmath@826 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -50,7 +50,7 @@
       <PrecompiledHeaderFile>../rtmath/Stdafx.h</PrecompiledHeaderFile>
       <MinimalRebuild>false</MinimalRebuild>
       <DisableSpecificWarnings>4996;4800;4251</DisableSpecificWarnings>
-      <PreprocessorDefinitions>_MBCS;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_MBCS;N_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/Zm1000 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
