--- a/rtmath/rtmath/rtmath.vcxproj
+++ b/rtmath/rtmath/rtmath.vcxproj
@@ -86,30 +86,18 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="other\disabled_poly\assocLegendre.h">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClInclude>
     <ClInclude Include="rtmath\absorb.h" />
     <ClInclude Include="rtmath\atmos.h" />
     <ClInclude Include="rtmath\atmoslayer.h" />
-    <ClInclude Include="rtmath\command.h" />
-    <ClInclude Include="rtmath\common_templates.h" />
-    <ClInclude Include="rtmath\config.h" />
-    <ClInclude Include="rtmath\coords.h" />
     <ClInclude Include="rtmath\ddscat\crossSection.h" />
     <ClInclude Include="rtmath\ddscat\ddavg.h" />
     <ClInclude Include="rtmath\ddscat\muellerRelations.h" />
     <ClInclude Include="rtmath\ddscat\shapestatsRotated.h" />
     <ClInclude Include="rtmath\ddscat\shapestatsviews.h" />
     <ClInclude Include="rtmath\ddscat\tmData.h" />
-    <ClInclude Include="rtmath\denseMatrix.h" />
-    <ClInclude Include="rtmath\density.h" />
     <ClInclude Include="rtmath\Garrett\image.h" />
     <ClInclude Include="rtmath\Garrett\mesh.h" />
     <ClInclude Include="rtmath\Garrett\pclstuff.h" />
-    <ClInclude Include="rtmath\MagickLINK.h" />
-    <ClInclude Include="rtmath\PCLlink.h" />
     <ClInclude Include="rtmath\da\daDiagonalMatrix.h" />
     <ClInclude Include="rtmath\da\daInitLayer.h" />
     <ClInclude Include="rtmath\da\daLayer.h" />
@@ -136,23 +124,14 @@
     <ClInclude Include="rtmath\ddscat\shapefile.h" />
     <ClInclude Include="rtmath\ddscat\shapes.h" />
     <ClInclude Include="rtmath\ddscat\shapestats.h" />
-    <ClInclude Include="rtmath\defs.h" />
-    <ClInclude Include="rtmath\depGraph.h" />
-    <ClInclude Include="rtmath\emd.h" />
     <ClInclude Include="rtmath\enums.h" />
-    <ClInclude Include="rtmath\error\debug.h" />
-    <ClInclude Include="rtmath\error\debug_mem.h" />
-    <ClInclude Include="rtmath\error\debug_mem_class.h" />
-    <ClInclude Include="rtmath\error\error.h" />
     <ClInclude Include="rtmath\gridded\gridCDF.h" />
     <ClInclude Include="rtmath\gridded\gridCoords.h" />
     <ClInclude Include="rtmath\gridded\gridded.h" />
     <ClInclude Include="rtmath\gridded\gridStatic.h" />
     <ClInclude Include="rtmath\interpolatable.h" />
     <ClInclude Include="rtmath\lbl.h" />
-    <ClInclude Include="rtmath\macros.h" />
     <ClInclude Include="rtmath\mapid.h" />
-    <ClInclude Include="rtmath\matrixop.h" />
     <ClInclude Include="rtmath\mie\ddOutputMie.h" />
     <ClInclude Include="rtmath\mie\mie-abNCalc.h" />
     <ClInclude Include="rtmath\mie\mie-AnCalc.h" />
@@ -167,45 +146,26 @@
     <ClInclude Include="rtmath\parsers.h" />
     <ClInclude Include="rtmath\pfFixed.h" />
     <ClInclude Include="rtmath\phaseFunc.h" />
-    <ClInclude Include="rtmath\polynomial.h" />
-    <ClInclude Include="rtmath\polynomials\chebyshev.h" />
-    <ClInclude Include="rtmath\polynomials\hermite.h" />
-    <ClInclude Include="rtmath\polynomials\laguerre.h" />
-    <ClInclude Include="rtmath\polynomials\legendre.h" />
-    <ClInclude Include="rtmath\polynomials\recursivePolynomial.h" />
     <ClInclude Include="rtmath\Public_Domain\bhmie.h" />
-    <ClInclude Include="rtmath\Public_Domain\MurmurHash3.h" />
     <ClInclude Include="rtmath\qt_funcs.h" />
-    <ClInclude Include="rtmath\quadrature.h" />
     <ClInclude Include="rtmath\rayleigh\Qcalc-Rayleigh.h" />
     <ClInclude Include="rtmath\rayleigh\rayleigh.h" />
     <ClInclude Include="rtmath\rayleigh\rayleighPhaseFunc.h" />
     <ClInclude Include="rtmath\rayleigh\Scalc-Rayleigh.h" />
-    <ClInclude Include="rtmath\refract.h" />
     <ClInclude Include="rtmath\resource.h" />
-    <ClInclude Include="rtmath\ROOTlink.h" />
-    <ClInclude Include="rtmath\ROOT_functions.h" />
     <ClInclude Include="rtmath\rtmath.h" />
-    <ClInclude Include="rtmath\serialization.h" />
-    <ClInclude Include="rtmath\Serialization\common_templates_serialization.h" />
     <ClInclude Include="rtmath\Serialization\ddOutputSingle_serialization.h" />
     <ClInclude Include="rtmath\Serialization\ddOutput_serialization.h" />
     <ClInclude Include="rtmath\Serialization\ddparGenerator_serialization.h" />
     <ClInclude Include="rtmath\Serialization\ddpar_serialization.h" />
     <ClInclude Include="rtmath\Serialization\ddScattMatrix_serialization.h" />
-    <ClInclude Include="rtmath\Serialization\matrixop_serialization.h" />
     <ClInclude Include="rtmath\Serialization\rotations_serialization.h" />
-    <ClInclude Include="rtmath\Serialization\serialization_macros.h" />
     <ClInclude Include="rtmath\Serialization\shapefile_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapestatsRotated_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapestats_serialization.h" />
     <ClInclude Include="rtmath\Serialization\shapes_serialization.h" />
     <ClInclude Include="rtmath\Serialization\tmData_serialization.h" />
-    <ClInclude Include="rtmath\splitSet.h" />
     <ClInclude Include="rtmath\Stdafx.h" />
-    <ClInclude Include="rtmath\units.h" />
-    <ClInclude Include="rtmath\VTKlink.h" />
-    <ClInclude Include="rtmath\zeros.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.ico" />
@@ -230,17 +190,11 @@
     <None Include="prebuild.csh" />
     <None Include="Readme.txt" />
     <None Include="rtlogo.png" />
-    <None Include="rtmath\cmake-settings.h.in" />
-    <None Include="rtmath\error\debug_subversion.h.template" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="other\disabled_poly\assocLegendre.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
     <ClCompile Include="other\lbl.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -252,11 +206,6 @@
     </ClCompile>
     <ClCompile Include="src\atmoslayer.cpp" />
     <ClCompile Include="src\bhmie.cpp" />
-    <ClCompile Include="src\chebyshev.cpp" />
-    <ClCompile Include="src\command.cpp" />
-    <ClCompile Include="src\common_templates_serialization.cpp" />
-    <ClCompile Include="src\config.cpp" />
-    <ClCompile Include="src\coords.cpp" />
     <ClCompile Include="src\crossSection.cpp" />
     <ClCompile Include="src\daDiagonalMatrix.cpp" />
     <ClCompile Include="src\daInitLayer.cpp" />
@@ -290,27 +239,15 @@
     <ClCompile Include="src\ddScattMatrix.cpp" />
     <ClCompile Include="src\ddScattMatrix_serialization.cpp" />
     <ClCompile Include="src\ddweights.cpp" />
-    <ClCompile Include="src\debug.cpp" />
-    <ClCompile Include="src\debug_mem.cpp" />
-    <ClCompile Include="src\denseMatrix.cpp" />
-    <ClCompile Include="src\density.cpp" />
-    <ClCompile Include="src\depGraph.cpp" />
-    <ClCompile Include="src\emd.cpp" />
-    <ClCompile Include="src\error.cpp" />
     <ClCompile Include="src\gridCDF.cpp" />
     <ClCompile Include="src\gridded.cpp" />
     <ClCompile Include="src\gridStatic.cpp" />
-    <ClCompile Include="src\hermite.cpp" />
     <ClCompile Include="src\hulls.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\interpolatable.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="src\laguerre.cpp" />
-    <ClCompile Include="src\legendre.cpp" />
-    <ClCompile Include="src\matrixop.cpp" />
-    <ClCompile Include="src\matrixop_serialization.cpp" />
     <ClCompile Include="src\mesh.cpp" />
     <ClCompile Include="src\mie-abNCalc.cpp" />
     <ClCompile Include="src\mie-AnCalc.cpp" />
@@ -326,22 +263,15 @@
     </ClCompile>
     <ClCompile Include="src\mtab.cpp" />
     <ClCompile Include="src\muellerRelations.cpp" />
-    <ClCompile Include="src\MurmurHash3.cpp" />
-    <ClCompile Include="src\os_functions.cpp" />
     <ClCompile Include="src\pclstuff.cpp" />
     <ClCompile Include="src\pfFixed.cpp" />
     <ClCompile Include="src\phaseFunc.cpp" />
-    <ClCompile Include="src\polynomial.cpp" />
     <ClCompile Include="src\Qcalc-Rayleigh.cpp" />
-    <ClCompile Include="src\quadrature.cpp" />
     <ClCompile Include="src\rayleighPhaseFunc.cpp" />
-    <ClCompile Include="src\recursivePolynomial.cpp" />
-    <ClCompile Include="src\refract.cpp" />
     <ClCompile Include="src\rotations.cpp" />
     <ClCompile Include="src\rotations_serialization.cpp" />
     <ClCompile Include="src\runScripts.cpp" />
     <ClCompile Include="src\Scalc-Rayleigh.cpp" />
-    <ClCompile Include="src\serialization.cpp" />
     <ClCompile Include="src\shapefile.cpp" />
     <ClCompile Include="src\shapefile_serialization.cpp" />
     <ClCompile Include="src\shapes-generators.cpp" />
@@ -352,16 +282,17 @@
     <ClCompile Include="src\shapestats_genstats.cpp" />
     <ClCompile Include="src\shapestats_serialization.cpp" />
     <ClCompile Include="src\shapes_serialization.cpp" />
-    <ClCompile Include="src\splitSet.cpp" />
     <ClCompile Include="src\Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="src\surfaces.cpp" />
-    <ClCompile Include="src\thermal.cpp" />
     <ClCompile Include="src\tmData.cpp" />
     <ClCompile Include="src\tmData_serialization.cpp" />
-    <ClCompile Include="src\units.cpp" />
-    <ClCompile Include="src\zeros.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\rtmath-libs\rtmath_core\rtmath_core.vcxproj">
+      <Project>{42ef064f-64a8-42f5-9acb-07e1908997bf}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
