--- a/rtmath/rtmath-apps/rtmath-version/rtmath-version.vcxproj
+++ b/rtmath/rtmath-apps/rtmath-version/rtmath-version.vcxproj
@@ -60,15 +60,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
-      <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rtmath-version.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\rtmath-libs\rtmath_core\rtmath_core.vcxproj">
+      <Project>{42ef064f-64a8-42f5-9acb-07e1908997bf}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
