Tweaked hulls to improve processing times. The PCL implementation is slower by over a factor of two due to the norm calculation. For further speed improvements, a redo of matrixops is required.
git-svn-id: file:///mnt/svn/rtmath@829 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/stats-ddscat-combined-plots/stats-ddscat-combined-plots.vcxproj
+++ b/rtmath/rtmath-apps/stats-ddscat-combined-plots/stats-ddscat-combined-plots.vcxproj
@@ -60,6 +60,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\rtmath-libs\rtmath_core\rtmath_core.vcxproj">
+      <Project>{42ef064f-64a8-42f5-9acb-07e1908997bf}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\rtmath\rtmath.vcxproj">
       <Project>{b80ce2c2-2d78-464d-b936-8977bc6083d7}</Project>
     </ProjectReference>
