Further splitting of rtmath into separate logical projects. This should speed up build times and reduce dependencies.
git-svn-id: file:///mnt/svn/rtmath@830 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-libs/rtmath_core/rtmath_core.vcxproj
+++ b/rtmath/rtmath-libs/rtmath_core/rtmath_core.vcxproj
@@ -50,6 +50,12 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>"$(SolutionDir)rtmath\prebuild.bat" "$(SolutionDir)rtmath\src"</Command>
+    </PreBuildEvent>
+    <PreBuildEvent>
+      <Message>Generate subversion header information</Message>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
